Upgrade version: 2022.0.3-SNAPSHOT.